# tableclothdemo

./: CMakeLists.txt  README  chatter_rocon_sample.sh  package.xml  tableclothdemo_rocon_sample.sh
config/: extract_footobject.yaml  pr1012_grabside_config.yaml  pr1012_otherside_config.yaml  pr1040_grabside_config.yaml  pr1040_otherside_config.yaml  pr2_rviz.rviz  pr2_rviz.rviz.back  shadow_filter_example.yaml  tableclothdemo_pr1012_config.yaml  tableclothdemo_pr1040_config.yaml
euslisp/: adjust-position.l  demo.l  dummy-grab-side.l  grab-otherside.l  grab-side-keep-pubbing.l  grab-side.l  past-approach.l  real-grab-side.l  sample-viewer-for-shelf-coords.l  subscribe-checker.l  table-detecter.l  tableclotheusdemo.l
launch/: chatter_pr1012_rocon.launch  chatter_pr1040_rocon.launch  checkerboard_pub.launch  checkerboard_sub.launch  cloth_detecter.launch  common_rocon.launch  detect.launch  detect_table.launch  local_pr2_cloth_open_pose.launch  pr1012_grabside.launch  pr1012_otherside.launch  pr1040_grabside.launch  pr1040_otherside.launch  rviz.launch  tableclothdemo_pr1012_rocon.launch  tableclothdemo_pr1040_rocon.launch  transform_to_footprint_frame.launch
scripts/: attention_pose_set.py  boundingbox_to_polygon_array.py  boundingbox_to_transform_stamped.py  get-pr1012-hands-coords.py  pub_boundingbox_for_scan.py  raw_boundingbox_to_margined_boundingbox.py  search-four-corners.py  simple-bb-sub.py  subscribe-checker.py  table_to_static.py
